--- a/sub-apps/side-nav/index.html
+++ b/sub-apps/side-nav/index.html
@@ -7,7 +7,7 @@
     <title>左侧菜单组件(Vue3) </title>
   </head>
   <body>
-    <div id="sidenav-menu"></div>
+    <div id="sidemenu-app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
